--- a/.github/workflows/build onecloud-22.05.yml
+++ b/.github/workflows/build onecloud-22.05.yml
@@ -36,7 +36,7 @@ jobs:
           cd onecloud-armbian-build
           # Don't update remote cache
           sudo ./compile.sh BOARD=onecloud BRANCH=edge RELEASE=jammy BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=sha,gpg,img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
-          sudo chown $(id -u):$(id -g) -R image*/
+          sudo chown $(id -u):$(id -g) -R output/
 
       - name: Install Dependents
         run: |
