--- a/.github/workflows/build onecloud-22.05.yml
+++ b/.github/workflows/build onecloud-22.05.yml
@@ -38,7 +38,15 @@ jobs:
         shell: bash
         run: |
           rsync -av current/userpatches/. onecloud-armbian-build/userpatches/
-          
+       - name: Import env
+        run: |
+          echo "$(echo "${{ needs.prepare.outputs.env }}" | base64 -d)" >>$GITHUB_ENV
+
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          repository: ${{ env.ARMBIAN_REPO }}
+          ref: ${{ env.ARMBIAN_SHA }}  
       - name: Build
         run: |
           cd onecloud-armbian-build
