--- a/.github/workflows/build onecloud-main.yml
+++ b/.github/workflows/build onecloud-main.yml
@@ -27,7 +27,8 @@ jobs:
       - name: "Copy userpatches to build folder"
         shell: bash
         run: |
-          rsync -av current/userpatches/. build/userpatches/
+          sudo rm -r build/lib     
+          rsync -av current/patch/. build/
           
       - name: Build
         run: |
