--- a/.github/workflows/build onecloud-22.05.yml
+++ b/.github/workflows/build onecloud-22.05.yml
@@ -17,7 +17,7 @@ jobs:
     
       - name: Checkout armbian/build
         run: |
-           git clone --depth=1 --branch=main https://github.com/hy5528/build.git
+           git clone --depth=1 --branch=main https://github.com/raysworld/onecloud-armbian-build
 
       - name: "Checkout current repository"
         uses: actions/checkout@v4
@@ -29,12 +29,12 @@ jobs:
       - name: "Copy userpatches to build folder"
         shell: bash
         run: |
-          sudo rm -r build/lib
-          rsync -av current/patch/. build/
+          sudo rm -r onecloud-armbian-build/lib
+          rsync -av current/patch/. onecloud-armbian-build/
     
       - name: Build
         run: |
-          cd build
+          cd onecloud-armbian-build
           # Don't update remote cache
           sudo ./compile.sh BOARD=onecloud BRANCH=current RELEASE=jammy BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_ONLY=no KERNEL_CONFIGURE=no COMPRESS_OUTPUTIMAGE=img DOWNLOAD_MIRROR=china MAINLINE_MIRROR=tuna EXTRAWIFI=no
           sudo chown $(id -u):$(id -g) -R output/
@@ -59,7 +59,7 @@ jobs:
 
       - name: Extract boot and rootfs partitions
         run: |
-          diskimg=$(ls build/output/images/*.img)
+          diskimg=$(ls onecloud-armbian-build/output/images/*.img)
           loop=$(sudo losetup --find --show --partscan $diskimg)
           sudo img2simg ${loop}p1 burn/boot.simg
           sudo img2simg ${loop}p2 burn/rootfs.simg
@@ -78,7 +78,7 @@ jobs:
           VERIFY:rootfs:normal:rootfs.VERIFY
           EOF
 
-          prefix=$(ls build/images/*.img | sed 's/\.img$//')
+          prefix=$(ls onecloud-armbian-build/images/*.img | sed 's/\.img$//')
           burnimg=${prefix}.burn.img
           ./AmlImg pack $burnimg burn/
 
@@ -102,4 +102,4 @@ jobs:
           append_body: true
           body_path: Release.md
           files: |
-            build/output/images/*
+            onecloud-armbian-build/output/images/*
